Closed Bug 980527 Opened 11 years ago Closed 11 years ago

HTTP cache v2: wrong log at CacheEntry::ReopenTruncated

Categories

(Core :: Networking: Cache, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

Attachments

(1 file)

LOG((" exchanged entry %p by entry %p, rv=0x%08x", this, newEntry.get(), rv)); But newEntry is null at that moment. Move the log bellow.
Attached patch v1Splinter Review
Attachment #8387120 - Flags: review?(michal.novotny)
Attachment #8387120 - Flags: review?(michal.novotny) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: