Bug 980527 - wrong log at CacheEntry::ReopenTruncated, r=michal